--- a/src/styles/HeroStyles/hero.scss
+++ b/src/styles/HeroStyles/hero.scss
@@ -3,7 +3,6 @@
 
 .hero-section {
   width: 100%;
-  height: 100vh;
   display: flex;
 }
 
@@ -13,7 +12,6 @@
   right: 0;
   z-index: 1;
   width: 100%;
-  height: 100vh;
 }
 
 .hero-text {
@@ -21,21 +19,17 @@
   flex-direction: column;
   position: relative;
   z-index: 3;
-  background-color: transparent;
   width: 40%;
   margin-top: 3rem;
   margin-left: 2.5rem;
   color: vars.$default-font-color;
   h1 {
-    background-color: transparent;
     font-size: 4.5rem;
     span {
       color: vars.$logo-color;
-      background-color: transparent;
     }
   }
   p {
-    background-color: transparent;
     font-size: 1rem;
     margin-top: 1.2rem;
     line-height: 30px;
@@ -46,10 +40,8 @@
 .hero-pic-container {
   position: relative;
   z-index: 2;
-  background-color: transparent;
   width: 60%;
   img {
-    background-color: transparent;
     width: 100%;
   }
 }
@@ -57,12 +49,16 @@
 .hero-button-container {
   display: flex;
   gap: 4rem;
-  background-color: transparent;
   margin-top: 2rem;
   .hero-book {
     @include mixin.button-style(vars.$logo-color, vars.$white-font-color);
   }
   .hero-about {
     @include mixin.button-style(vars.$default-font-color, vars.$white-font-color);
+    &:hover {
+      background-color: vars.$white-font-color;
+      color: vars.$default-font-color;
+      border: 2px solid black;
+    }
   }
 }
