--- a/src/styles/NavbarStyles/navbar.css
+++ b/src/styles/NavbarStyles/navbar.css
@@ -5,7 +5,6 @@
 }
 
 nav {
-  background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -19,7 +18,6 @@ nav .logo-container img {
   width: 8rem;
   position: relative;
   z-index: 3;
-  background-color: transparent;
 }
 
 .pages-container ul {
@@ -33,7 +31,6 @@ nav .logo-container img {
   font-size: 1.2rem;
   position: relative;
   z-index: 3;
-  background-color: transparent;
 }
 
 .account-container {
@@ -41,11 +38,10 @@ nav .logo-container img {
   gap: 1.5rem;
   position: relative;
   z-index: 3;
-  background-color: transparent;
 }
 .account-container .register {
   background-color: #009cff;
-  border: none;
+  border: 2px solid transparent;
   color: #f3f3f3;
   padding: 1rem 2rem;
   font-weight: 500;
@@ -56,7 +52,7 @@ nav .logo-container img {
 }
 .account-container .sign-in {
   background-color: transparent;
-  border: none;
+  border: 2px solid transparent;
   color: #010103;
   padding: 1rem 2rem;
   font-weight: 500;
