--- a/src/styles/global/global.css
+++ b/src/styles/global/global.css
@@ -3,10 +3,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: #f3f3f3;
+  background-color: transparent;
   font-family: "Roboto", sans-serif;
 }
 
 html {
   scroll-behavior: smooth;
+}
+
+body {
+  background-color: #f3f3f3;
 }
