--- a/src/styles/global/_mixins.scss
+++ b/src/styles/global/_mixins.scss
@@ -1,11 +1,22 @@
 @mixin button-style($background-color, $text-color) {
+  box-shadow: 0 10px 15px 0 $background-color;
   background-color: $background-color;
-  border: 2px solid transparent;
   color: $text-color;
+  border: 2px solid transparent;
   padding: 1rem 2rem;
   font-weight: 500;
   border-radius: 5px;
   font-size: 1.1rem;
-  box-shadow: 0 10px 15px 0 $background-color;
+  cursor: pointer;
+}
+
+@mixin car-button() {
+  border: 1px solid transparent;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding: 1rem 1.5rem;
+  font-size: 1.3rem;
+  font-weight: 700;
   cursor: pointer;
 }
