--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -2,3 +2,5 @@ $default-font-color: #010103;
 $white-font-color: #f3f3f3;
 $logo-color: #009cff;
 $description-font-color: #706f7b;
+$banner-color: #2d2d2d;
+$button-hover-color: #0288db;
