--- a/src/styles/CarStats/carstats.css
+++ b/src/styles/CarStats/carstats.css
@@ -10,6 +10,7 @@
   border: 2px solid #706f7b;
   padding: 0.5rem 1.5rem;
   text-align: center;
+  font-weight: 600;
 }
 
 .rent-price {
@@ -23,4 +24,16 @@
   width: 90%;
   margin-left: 2rem;
   font-weight: 900;
+}
+
+.car-picture-container {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: 400px;
+}
+.car-picture-container img {
+  width: 100%;
+  max-height: 100%;
 }
