--- a/src/styles/CarStats/carstats.scss
+++ b/src/styles/CarStats/carstats.scss
@@ -10,6 +10,7 @@
       border: 2px solid vars.$description-font-color;
       padding: 0.5rem 1.5rem;
       text-align: center;
+      font-weight: 600;
     }
   }
 }
@@ -25,4 +26,16 @@
   width: 90%;
   margin-left: 2rem;
   font-weight: 900;
+}
+
+.car-picture-container {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: 400px;
+  img {
+    width: 100%;
+    max-height: 100%;
+  }
 }
