--- a/src/styles/FAQStyles/faq.scss
+++ b/src/styles/FAQStyles/faq.scss
@@ -9,7 +9,7 @@
   background: url("../../images/faq-background.png");
   background-repeat: no-repeat;
   background-position: bottom right;
-  margin-top: 8rem;
+  margin: 8rem 0;
 }
 
 .faq-text-container {
