--- a/src/styles/Footer/footer.css
+++ b/src/styles/Footer/footer.css
@@ -6,13 +6,13 @@ footer {
   padding: 2rem 4rem;
 }
 
-.logo-container {
+.footer-logo-container {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.logo-container img {
+.footer-logo-container img {
   width: 200px;
   cursor: pointer;
 }
@@ -30,6 +30,10 @@ footer {
 .footer-center .phone,
 .footer-center .email {
   font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.6rem;
 }
 .footer-center .phone:hover,
 .footer-center .email:hover {
