Added React Router; Linked the pages

--- a/src/styles/AboutStyles/about.css
+++ b/src/styles/AboutStyles/about.css
@@ -20,6 +20,10 @@
   position: relative;
   z-index: 3;
 }
+.about-background .about-nav-text a {
+  color: #010103;
+  text-decoration: none;
+}
 .about-background .about-nav-text h1 {
   font-size: 3rem;
   font-weight: 900;
