--- a/src/styles/CarCardStyles/car-card.css
+++ b/src/styles/CarCardStyles/car-card.css
@@ -47,6 +47,7 @@
   font-size: 1.1rem;
   cursor: pointer;
   margin: 0.5rem 0;
+  width: 100%;
 }
 .car-specs-container button:hover {
   background-color: #0288db;
