--- a/src/styles/CarsStyles/cars.scss
+++ b/src/styles/CarsStyles/cars.scss
@@ -1,8 +1,8 @@
 @use "../global/variables" as vars;
 
-.about-background {
+.cars-background {
   width: 100%;
-  .about-image {
+  .cars-image {
     position: absolute;
     top: 0;
     right: 0;
@@ -11,11 +11,15 @@
     height: 23rem;
     opacity: 0.1;
   }
-  .about-nav-text {
+  .cars-nav-text {
     margin-left: 3rem;
     margin-top: 4rem;
     position: relative;
     z-index: 3;
+    a {
+      color: vars.$default-font-color;
+      text-decoration: none;
+    }
     h1 {
       font-size: 3rem;
       font-weight: 900;
