--- a/src/styles/BannerStyles/banner.scss
+++ b/src/styles/BannerStyles/banner.scss
@@ -9,15 +9,25 @@
   align-items: center;
   justify-content: center;
   padding: 5rem 3rem;
+  @media (max-width: 768px) {
+    padding: 2rem;
+  }
   h1 {
     color: vars.$white-font-color;
     font-size: 3.5rem;
     font-weight: 700;
+    @media (max-width: 768px) {
+      font-size: 1.8rem;
+      text-align: center;
+    }
   }
   p {
     color: vars.$white-font-color;
     font-size: 1.5rem;
     margin-top: 1.5rem;
+    @media (max-width: 768px) {
+      text-align: center;
+    }
     span {
       color: vars.$logo-color;
       font-weight: 500;
