--- a/src/styles/BookingFormStyles/booking-form.scss
+++ b/src/styles/BookingFormStyles/booking-form.scss
@@ -4,8 +4,17 @@
 .booking-form {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto auto auto;
   gap: 2rem;
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.booking-form > *:nth-child(7) {
+  grid-column: 2 / 3;
+  grid-row: 4 / 5;
 }
 
 .one-part-container {
@@ -51,7 +60,7 @@
   display: flex;
   align-items: center;
   button {
-    @include mixin.button-style(vars.$logo-color, vars.$white-font-color);
+    @include mixin.button-style(vars.$logo-color, vars.$white-font-color, vars.$button-hover-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,5 +69,30 @@
     box-shadow: none;
     padding: 0.6rem;
     border-radius: 3px;
+    &:hover {
+      box-shadow: none;
+    }
   }
+}
+
+.empty {
+  background-color: #f8d7da;
+  font-size: 1.2rem;
+  color: #721c24;
+  padding: 0.5rem 3rem;
+  border-radius: 10px;
+  margin-bottom: 1.5rem;
+  font-weight: 700;
+  border: 1px solid transparent;
+}
+
+.ready {
+  background-color: #c3fabe;
+  font-size: 1.2rem;
+  color: #2a6817;
+  padding: 0.75rem 3rem;
+  border-radius: 10px;
+  margin-bottom: 1.5rem;
+  border: 1px solid transparent;
+  font-weight: 700;
 }
