--- a/src/styles/CarStats/carstats.scss
+++ b/src/styles/CarStats/carstats.scss
@@ -2,10 +2,17 @@
 
 .car-description-container {
   width: 30%;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
   table {
     border-collapse: collapse;
     width: 90%;
     margin-left: 2rem;
+    @media (max-width: 768px) {
+      margin: 0;
+      width: 100%;
+    }
     td {
       border: 2px solid vars.$description-font-color;
       padding: 0.5rem 1.5rem;
@@ -26,6 +33,10 @@
   width: 90%;
   margin-left: 2rem;
   font-weight: 900;
+  @media (max-width: 768px) {
+    width: 100%;
+    margin-left: 0;
+  }
 }
 
 .car-picture-container {
@@ -34,6 +45,9 @@
   align-items: center;
   justify-content: center;
   max-height: 400px;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
   img {
     width: 100%;
     max-height: 100%;
