--- a/src/styles/ChooseUsStyles/choose.scss
+++ b/src/styles/ChooseUsStyles/choose.scss
@@ -6,6 +6,9 @@
   padding: 2rem 8rem;
   display: flex;
   flex-direction: column;
+  @media (max-width: 768px) {
+    padding: 2rem 1rem;
+  }
 }
 
 .choose-img-container {
@@ -20,23 +23,43 @@
   margin-top: 7rem;
   display: flex;
   justify-content: space-between;
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
   .choose-text {
     width: 50%;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
     h3 {
       font-size: 1.8rem;
+      @media (max-width: 768px) {
+        text-align: center;
+      }
     }
     h1 {
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 1.5rem;
+      @media (max-width: 768px) {
+        text-align: center;
+        font-size: 2.5rem;
+      }
     }
     p {
       color: vars.$description-font-color;
       margin-bottom: 2rem;
       text-align: left;
+      @media (max-width: 768px) {
+        text-align: center;
+      }
     }
     button {
       @include mixin.button-style(vars.$logo-color, vars.$white-font-color, vars.$button-hover-color);
+      @media (max-width: 768px) {
+        width: 100%;
+        margin-bottom: 2rem;
+      }
     }
   }
 }
@@ -46,6 +69,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .choose-part-container {
@@ -53,6 +79,9 @@
   display: flex;
   justify-content: flex-end;
   gap: 1.5rem;
+  @media (max-width: 768px) {
+    margin-bottom: 1.5rem;
+  }
   .round-background {
     background-color: vars.$logo-color;
     border-radius: 100%;
