--- a/src/styles/Footer/footer.css
+++ b/src/styles/Footer/footer.css
@@ -5,6 +5,13 @@ footer {
   gap: 5rem;
   padding: 2rem 4rem;
 }
+@media (max-width: 768px) {
+  footer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
 
 .footer-logo-container {
   width: 100%;
@@ -27,6 +34,11 @@ footer {
   line-height: 25px;
   font-size: 1.5rem;
 }
+@media (max-width: 768px) {
+  .footer-center h2 {
+    margin-bottom: 1rem;
+  }
+}
 .footer-center .phone,
 .footer-center .email {
   font-size: 1.2rem;
@@ -34,6 +46,12 @@ footer {
   align-items: center;
   justify-content: center;
   gap: 0.6rem;
+}
+@media (max-width: 768px) {
+  .footer-center .phone,
+  .footer-center .email {
+    margin-bottom: 1rem;
+  }
 }
 .footer-center .phone:hover,
 .footer-center .email:hover {
@@ -48,6 +66,16 @@ footer {
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 768px) {
+  .footer-right h2 {
+    margin-bottom: 1rem;
+  }
+}
 .footer-right p {
   font-size: 1.1rem;
+}
+@media (max-width: 768px) {
+  .footer-right p {
+    margin-bottom: 1rem;
+  }
 }
