--- a/src/styles/Footer/footer.scss
+++ b/src/styles/Footer/footer.scss
@@ -6,6 +6,11 @@ footer {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 5rem;
   padding: 2rem 4rem;
+  @media (max-width: 768px) {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .footer-logo-container {
@@ -27,6 +32,9 @@ footer {
   h2 {
     line-height: 25px;
     font-size: 1.5rem;
+    @media (max-width: 768px) {
+      margin-bottom: 1rem;
+    }
   }
   .phone,
   .email {
@@ -35,6 +43,9 @@ footer {
     align-items: center;
     justify-content: center;
     gap: 0.6rem;
+    @media (max-width: 768px) {
+      margin-bottom: 1rem;
+    }
     &:hover {
       color: vars.$logo-color;
       cursor: pointer;
@@ -48,7 +59,15 @@ footer {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  h2 {
+    @media (max-width: 768px) {
+      margin-bottom: 1rem;
+    }
+  }
   p {
     font-size: 1.1rem;
+    @media (max-width: 768px) {
+      margin-bottom: 1rem;
+    }
   }
 }
