--- a/src/styles/HeroStyles/hero.scss
+++ b/src/styles/HeroStyles/hero.scss
@@ -4,6 +4,9 @@
 .hero-section {
   width: 100%;
   display: flex;
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .background-image {
@@ -12,6 +15,9 @@
   right: 0;
   z-index: 1;
   width: 100%;
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
 
 .hero-text {
@@ -23,8 +29,18 @@
   margin-top: 3rem;
   margin-left: 2.5rem;
   color: vars.$default-font-color;
+  @media (max-width: 768px) {
+    width: 100%;
+    margin: 0;
+    margin-top: 3rem;
+    padding: 0 1rem;
+  }
   h1 {
     font-size: 4.5rem;
+    @media (max-width: 768px) {
+      font-size: 1.9rem;
+      text-align: center;
+    }
     span {
       color: vars.$logo-color;
     }
@@ -34,6 +50,9 @@
     margin-top: 1.2rem;
     line-height: 30px;
     color: #706f7b;
+    @media (max-width: 768px) {
+      text-align: center;
+    }
   }
 }
 
@@ -43,6 +62,9 @@
   width: 60%;
   img {
     width: 100%;
+    @media (max-width: 768px) {
+      display: none;
+    }
   }
 }
 
@@ -50,11 +72,22 @@
   display: flex;
   gap: 4rem;
   margin-top: 2rem;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    width: 100%;
+    gap: 1.5rem;
+  }
   .hero-book {
     @include mixin.button-style(vars.$logo-color, vars.$white-font-color, vars.$button-hover-color);
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
   .hero-about {
     @include mixin.button-style(vars.$default-font-color, vars.$white-font-color, vars.$white-font-color);
+    @media (max-width: 768px) {
+      width: 100%;
+    }
     &:hover {
       color: vars.$default-font-color;
       border: 2px solid black;
