--- a/src/styles/VehiclesStyles/vehicles.scss
+++ b/src/styles/VehiclesStyles/vehicles.scss
@@ -5,6 +5,9 @@
   margin-top: 8rem;
   padding: 0 3rem;
   width: 100%;
+  @media (max-width: 768px) {
+    padding: 0 1rem;
+  }
 }
 
 .vehicles-text {
@@ -16,24 +19,36 @@
   h1 {
     font-size: 2.2rem;
     margin-bottom: 1rem;
+    @media (max-width: 768px) {
+      text-align: center;
+    }
   }
   p {
     text-align: center;
     width: 40%;
     color: vars.$description-font-color;
     line-height: 23px;
+    @media (max-width: 768px) {
+      text-align: center;
+    }
   }
 }
 
 .available-vehicles-container {
   display: flex;
   margin-top: 4rem;
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .mouse-scroll {
   position: absolute;
   left: 45%;
   bottom: 20px;
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
 
 .mouse-round {
@@ -69,6 +84,9 @@
   width: 20%;
   max-height: 25rem;
   overflow-y: scroll;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
   &::-webkit-scrollbar {
     display: none;
   }
