--- a/src/styles/AboutStyles/about.css
+++ b/src/styles/AboutStyles/about.css
@@ -48,9 +48,26 @@
   display: flex;
   gap: 2rem;
 }
+@media (max-width: 768px) {
+  .about-company {
+    flex-direction: column;
+    padding: 0 1rem;
+  }
+}
+@media (max-width: 768px) {
+  .about-company .about-company-image-container {
+    width: 100%;
+  }
+}
 .about-company .about-company-image-container img {
   height: 30rem;
   width: 30rem;
+}
+@media (max-width: 768px) {
+  .about-company .about-company-image-container img {
+    width: 100%;
+    height: 100%;
+  }
 }
 .about-company .about-text-container {
   display: flex;
