--- a/src/styles/ContactStyles/contact.scss
+++ b/src/styles/ContactStyles/contact.scss
@@ -48,24 +48,48 @@
   background-size: cover;
   padding: 0 3rem;
   display: flex;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    padding: 0 1rem;
+  }
 }
 
 .contact-text {
   width: 50%;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
   h1 {
     font-size: 4rem;
+    @media (max-width: 768px) {
+      font-size: 3rem;
+      text-align: center;
+    }
   }
   p {
     font-size: 1.3rem;
     color: vars.$description-font-color;
     margin: 2rem 0;
+    @media (max-width: 768px) {
+      font-size: 1rem;
+      text-align: center;
+    }
   }
   .contact-options {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    @media (max-width: 768px) {
+      gap: 0;
+    }
     span {
       font-size: 1.2rem;
+      @media (max-width: 768px) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 2rem;
+      }
       &:hover {
         color: vars.$logo-color;
         cursor: pointer;
@@ -79,6 +103,9 @@
   .helper-container {
     width: 30rem;
     max-width: 30rem;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
 }
 
@@ -86,11 +113,17 @@
   width: 50%;
   display: flex;
   flex-direction: column;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
   form {
     display: flex;
     flex-direction: column;
     width: 30rem;
     max-width: 30rem;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
   input {
     outline: none;
@@ -100,11 +133,17 @@
     border: none;
     width: 25rem;
     margin-bottom: 2.5rem;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
   label {
     font-size: 1.1rem;
     font-weight: 700;
     margin-bottom: 0.75rem;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
     span {
       color: vars.$logo-color;
       margin-left: 0.3rem;
@@ -120,15 +159,24 @@
     border: none;
     outline: none;
     padding: 1rem 2rem;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
   .helper-container {
     margin-left: auto;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
   button {
     @include mixin.button-style(vars.$logo-color, vars.$white-font-color, vars.$button-hover-color);
     width: 25rem;
     max-width: 25rem;
     font-size: 1.4rem;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
     .mail-icon {
       margin-right: 1rem;
     }
