--- a/src/styles/MobileNav/mobile-nav.scss
+++ b/src/styles/MobileNav/mobile-nav.scss
@@ -7,6 +7,8 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: relative;
+  z-index: 999999;
 }
 
 .logo-container {
@@ -20,6 +22,7 @@
 
 .more-icon {
   height: 25px;
+  z-index: 99999;
 }
 
 .close-sidebar-container {
@@ -63,6 +66,6 @@
 }
 
 .open {
-  left: 0;
+  left: 0%;
   transition: all 1s ease;
 }
